Set CLASSESDIR for OSes using unix/classes.pp source

--- a/rtl/aix/Makefile.fpc
+++ b/rtl/aix/Makefile.fpc
@@ -58,6 +58,7 @@ PROCINC=$(RTL)/$(CPU_TARGET)
 OSPROCINC=$(RTL)/aix/$(CPU_TARGET)
 UNIXINC=$(RTL)/unix
 UNITPREFIX=rtl
+CLASSESDIR=$(UNIXINC)
 CPU_UNITS=
 CWSTRING_DEPS_OS=$(UNIXINC)/cwstraix.inc
 DYNLIBS_DEPS_OS=$(DLUNIT)$(PPUEXT)
