--- a/rtl/dragonfly/Makefile.fpc
+++ b/rtl/dragonfly/Makefile.fpc
@@ -62,6 +62,7 @@ UNITPREFIX=rtl
 CPU_UNITS=
 
 BSD_DEPS_OS=$(SYSCALLUNIT)$(PPUEXT)
+CLASSESDIR=$(UNIXINC)
 DOSDIR=$(UNIXINC)
 
 DYNLIBS_DEPS_OS=$(DLUNIT)$(PPUEXT)
