--- a/rtl/netbsd/Makefile.fpc
+++ b/rtl/netbsd/Makefile.fpc
@@ -62,6 +62,7 @@ TARGETPROCINC=$(RTL)/netbsd/$(CPU_TARGET)
 
 BASEUNIX_DEPS_OS=$(SYSCTLUNIT)$(PPUEXT)
 BSD_DEPS_OS=$(SYSCALLUNIT)$(PPUEXT)
+CLASSESDIR=$(UNIXINC)
 DOSDIR=$(UNIXINC)
 DYNLIBS_DEPS_OS=$(DLUNIT)$(PPUEXT)
 DYNLIBSINCDIR=$(UNIXINC)
