Add tthread.inc dependency for classes unit using TTHREADINCDIR variable

--- a/rtl/haiku/Makefile.fpc
+++ b/rtl/haiku/Makefile.fpc
@@ -57,6 +57,7 @@ SYSINITUNITS=si_c si_dllc
 UNITPREFIX=rtl
 DYNLIBS_DEPS_OS=$(DLUNIT)$(PPUEXT)
 DYNLIBSINCDIR=$(UNIXINC)
+TTHREADINCDIR=$(WINDIR)
 
 ifeq ($(ARCH),i386)
 LOADERS=cprt0 dllcprt0
