--- a/rtl/win32/Makefile.fpc
+++ b/rtl/win32/Makefile.fpc
@@ -61,6 +61,7 @@ SYSUTILS_OPT=-Fi$(WINDIR)
 SYSUTILS_DEPS_OS=$(WINDOWSUNIT)$(PPUEXT) $(WINDIRSUNIT)$(PPUEXT)
 WINDIRSDIR=$(WINDIR)
 DYNLIBSINCDIR=$(WINDIR)
+TTHREADINCDIR=$(WINDIR)
 
 # Files used by windows.pp
 include $(WININC)/makefile.inc
