--- a/rtl/wince/Makefile.fpc
+++ b/rtl/wince/Makefile.fpc
@@ -84,6 +84,7 @@ SYSUTILS_OPT=-Fi../win
 SYSUTILS_DEPS_OS=$(WINDOWSUNIT)$(PPUEXT) 
 FPWIDESTRING_DEPS_OS=$(WINDOWSUNIT)$(PPUEXT)
 TYPES_DEPS_OS=$(WINDOWSUNIT)$(PPUEXT)
+TTHREADINCDIR=$(WINDIR)
 
 [rules]
 .NOTPARALLEL:
