Modify rules for freebsd unit for DOTTED

--- a/rtl/freebsd/Makefile.fpc
+++ b/rtl/freebsd/Makefile.fpc
@@ -16,7 +16,7 @@ units=$(SYSTEMUNIT) $(UUCHARUNIT) $(UNIXTYPEUNIT) $(CTYPESUNIT) $(OBJPASUNIT) $(
       $(DLUNIT) $(TERMIOUNIT) \
       $(SYSUTILSUNIT) $(MATHUNIT) $(TYPINFOUNIT) $(TYPESUNIT) $(SORTBASEUNIT) $(CLASSESUNIT) $(FGLUNIT) $(DYNLIBSUNIT) \
       $(CPU_UNITS) $(CHARSETUNIT) $(CPALLUNIT) $(GETOPTSUNIT) $(HEAPTRCUNIT) $(LNFODWRFUNIT) $(LINEINFOUNIT) \
-      $(ERRORSUNIT) $(BSDUNIT) freebsd \
+      $(ERRORSUNIT) $(BSDUNIT) $(FREEBSDUNIT) \
       $(CONSOLEUNIT) \
       $(SYSCONSTUNIT) $(CTHREADSUNIT) $(DOSUNIT) $(CWSTRINGUNIT) \
       $(FPINTRESUNIT) $(UNIXCPUNIT) $(FPWIDESTRINGUNIT) \
@@ -135,4 +135,25 @@ dllprt0$(OEXT) : $(CPU_TARGET)/dllprt0.as
 
 $(SYSTEMUNIT)$(PPUEXT) : $(BSDINC)/$(SYSTEMUNIT).pp unxconst.inc $(SYSDEPS)
         $(COMPILER) $(FPC_SYSTEM_OPT) -Us -Sg $(BSDINC)/$(SYSTEMUNIT).pp
+
+#
+# freebsd unit
+#
+ifeq ($(filter -dFPC_USE_LIBC,$(FPCOPT)),)
+  FREEBSD_DEPS_OS+=$(SYSCALLUNIT)$(PPUEXT)
+else
+  FREEBSD_DEPS_OS+=$(INITCUNIT)$(PPUEXT)
+endif
+
+
+FREEBSD_DEPS = freebsd.pas $(SYSTEMUNIT)$(PPUEXT) $(BASEUNIXUNIT)$(PPUEXT) $(SYSCTLUNIT)$(PPUEXT) \
+         $(FREEBSD_DEPS_OS) $(FREEBSD_DEPS_CPU)
+
+freebsd$(PPUEXT): $(FREEBSD_DEPS)
+	$(COMPILER) $(FREEBSD_OPT) $<
+
+FreeBSDApi.FreeBSD$(PPUEXT): $(NSFREEBSDDIR)/FreeBSDApi.FreeBSD.pas $(FREEBSD_DEPS)
+        $(COMPILER) $(FREEBSD_OPT) $<
+
+
 
