Add dependency of dos unit on winprocs and wintypes units for win16 OS

--- a/rtl/win16/Makefile.fpc
+++ b/rtl/win16/Makefile.fpc
@@ -31,7 +31,7 @@ UNITPREFIX=rtl
 SYSTEMUNIT=system
 
 TYPES_DEPS_OS=$(WINTYPESUNIT)$(PPUEXT)
-DOS_DEPS_OS = registers.inc $(INC)/dosh.inc $(INC)/dos.inc $(INC)/fexpand.inc
+DOS_DEPS_OS = registers.inc $(INC)/dosh.inc $(INC)/dos.inc $(INC)/fexpand.inc $(WINTYPESUNIT)$(PPUEXT) $(WINPROCSUNIT)$(PPUEXT)
 SYSUTILS_DEPS_OS = $(DOSUNIT)$(PPUEXT) $(WINTYPESUNIT)$(PPUEXT) $(WINPROCSUNIT)$(PPUEXT)
 CLASSES_DEPS_OS = $(WINPROCSUNIT)$(PPUEXT) $(WINTYPESUNIT)$(PPUEXT)
 
