--- a/rtl/netbsd/Makefile
+++ b/rtl/netbsd/Makefile
@@ -897,7 +897,7 @@ CLASSESDIR=$(UNIXINC)
 DOSDIR=$(UNIXINC)
 DYNLIBS_DEPS_OS=$(DLUNIT)$(PPUEXT)
 DYNLIBSINCDIR=$(UNIXINC)
-SYSCALL_DEPS_OS=$(BASEUNIXUNIT)$(PPUEXT) $(UNIXTYPEUNIT)$(PPUEXT) sysnr.inc $(BSDPROCINC)/syscallh.inc
+SYSCALL_DEPS_OS = sysnr.inc $(BSDPROCINC)/syscallh.inc
 SYSUTILSDIR=$(UNIXINC)
 SYSUTILS_DEPS_OS = $(UNIXUNIT)$(PPUEXT) $(ERRORSUNIT)$(PPUEXT)
 SYSTEMUNIT=system
