Add SYSTEMDIR variable (needed for BSD OSes)

--- a/rtl/inc/Makefile.rtl
+++ b/rtl/inc/Makefile.rtl
@@ -594,6 +594,10 @@ ifndef NSSYSUTILSDIR
 NSSYSUTILSDIR=$(NSDIR)/$(SYSUTILSDIR)
 endif
 
+ifndef SYSTEMDIR
+SYSTEMDIR=$(OSDIR)
+endif
+
 ifndef CLASSESDIR
 CLASSESDIR=$(OSDIR)
 endif
@@ -674,7 +678,7 @@ endif
 
 # System
 
-$(SYSTEMUNIT)$(PPUEXT) : $(SYSTEMUNIT).$(SYSTEMUNITEXT) $(SYSDEPS)
+$(SYSTEMUNIT)$(PPUEXT) : $(SYSTEMDIR)/$(SYSTEMUNIT).$(SYSTEMUNITEXT) $(SYSDEPS)
         $(COMPILER) $(FPC_SYSTEM_OPT) -Us -Sg $<
 
 # uuchar
